[package]
name = "ingress_intel_rs"
version = "0.7.1"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
reqwest = { version = "0.11.22", features = ["cookies", "json", "gzip"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.18.0"
tracing = "0.1.40"
regex = "1.10.2"
percent-encoding = "2.3.0"
stream_throttle = "0.5.1"
tokio = { version = "1.33.0", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["sync", "macros", "time"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
