[package]
name = "ingress_intel_rs"
version = "0.7.1"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["cookies", "json", "gzip"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
once_cell = "1.19.0"
tracing = "0.1.40"
regex = "1.10.5"
percent-encoding = "2.3.1"
stream_throttle = "0.5.1"
tokio = { version = "1.38.0", features = ["sync", "time"] }

[dev-dependencies]
serde_path_to_error = "0.1.16"
tokio = { version = "1.38.0", features = ["sync", "macros", "time"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
