[package]
name = "ingress_intel_rs"
version = "0.8.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tracing = "0.1"
regex = "1.10"
percent-encoding = "2.3"
smol_str = { version = "0.3", features = ["serde"] }
tokio = { version = "1.38", features = ["sync", "time"] }
tokio-stream = "0.1"
thiserror = "2.0"

[dev-dependencies]
serde_path_to_error = "0.1"
test-with = "0.15"
tokio = { version = "1.38", features = ["sync", "macros", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
